[project]
name = "cirrus-ci-tools"
version = "0.1.0"
description = "Tools for Cirrus CI"
readme = "README.md"
authors = [
    { name = "Adonis Ling", email = "adonis0147@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
trigger-cirrus-ci = "cirrus_ci_tools:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.1",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server[all]>=1.13.1",
    "types-requests>=2.32.4.20250913",
]
